# rustle

./: main.py  main.spec  pyproject.toml  rss.json  rss.xml
apps/cli/: main.py
commands/weather/: run.py
functions/greet/: run.py
functions/greetings/: cli.py
functions/health/: doctor.py  run.py
functions/weather/: run.py  weather.py
src/: config.py  main.py
src/commands/: health.py  weather.py
src/core/: logger.py
src/greetings/: __main__.py
src/services/: rss_service.py  weather_service.py
src/view/: help.py  weather_view.py
