[project]
name = "rustle"
version = "0.1.0"
description = "CLI utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.7",
    "typing-extensions>=4.15.0",
]

[project.scripts]
rustle = "apps.cli.main:start"

[tool.setuptools.packages.find]
include = ["apps*", "functions*"]